--- a/MicroserviceConfiguration/gatewayServer-dev.yml
+++ b/MicroserviceConfiguration/gatewayServer-dev.yml
@@ -19,6 +19,7 @@ spring:
           predicates:
             - Path=/auth/**
           filters:
+            - RewritePath=/(?<segment>.*), /$\{segment}
             - name: CircuitBreaker
               args:
                 name: fallbackAuth
