--- a/MicroserviceConfiguration/gatewayServer-dev.yml
+++ b/MicroserviceConfiguration/gatewayServer-dev.yml
@@ -8,7 +8,7 @@ resilience4j:
     configs:
       defaultCircuitbreaker:
         slidingWindowType: COUNT_BASED #Kayıt altına alınan data kıstası. Saniye olarakta belirlenebilmektedir.
-        slidingWindowSize: 10 #Son x datanın dikkate alınmasını sağlar.
+        slidingWindowSize: 5 #Son x datanın dikkate alınmasını sağlar.
         minimumNumberOfCalls: 5 #Asgari kayıt sayısını belirler. Bu kayıt sayısından sonra algoritmalar çalışacaktır.
         permittedNumberOfCallsInHalfOpenState: 2 #Sigora yarı açıkken yapılacak max kayıt sayısı.
         automaticTransitionFromOpenToHalfOpenEnabled: true #Sigortanın açık konumdan yarı-açık konuma gelmesini üsrecinin atomatize edilmesi sağlar.
@@ -16,6 +16,8 @@ resilience4j:
         waitDurationInOpenState: 60s #Açık olan devre saniye sonra yarı açık hal gelecektir.
         slowCallDurationThreshold: 30s #Saniye üzerinde dönen request'leri yavaş olarak kabul edecektir.
         slowCallRateThreshold: 90 #Yavaş request sayısı %x'i aşarsa sigorta yarı-açık konuma gelecektir.
+        ringBufferSizeInHalfOpenState: 5
+        ringBufferSizeInClosedState: 5
         registerHealthIndicator: true
     instances:
       fallbackAuth:
