--- a/MicroserviceConfiguration/gatewayServer-dev.yml
+++ b/MicroserviceConfiguration/gatewayServer-dev.yml
@@ -65,6 +65,11 @@ spring:
               args:
                 name: fallbackAuth
                 fallbackUri: forward:/fallbackAuthServer
+             - name: RequestRateLimiter
+               args:
+                 redis-rate-limtter.replenishRate: 20
+                 redis-rate-limtter.burstCapacity: 40
+                 redis-rate-limtter.requestedTokens: 1
         - id: userDetailService
           uri: lb://USER-DETAIL
           predicates:
