--- a/MicroserviceConfiguration/gatewayServer-dev.yml
+++ b/MicroserviceConfiguration/gatewayServer-dev.yml
@@ -110,6 +110,9 @@ spring:
               args:
                 name: fallbackParticipant
                 fallbackUri: forward:/fallbackParticipantService
+redis:
+  host: localhost
+  port: 6379
 eureka:
   client:
     registerWithEureka: true
