--- a/MicroserviceConfiguration/gatewayServer-dev.yml
+++ b/MicroserviceConfiguration/gatewayServer-dev.yml
@@ -6,6 +6,10 @@ eurakaIP: localhost:8001/eureka/
 server:
   port: 8002
 spring:
+  data:
+    redis:
+      host: localhost
+      port: 6380
   main:
     web-application-type: reactive
   application:
@@ -108,9 +112,7 @@ resilience4j:
         baseConfig: defaultTimelimiter
       fallbackParticipant:
         baseConfig: defaultTimelimiter
-redis:
-  host: localhost
-  port: 6380
+
 eureka:
   client:
     registerWithEureka: true
